[gd_scene format=3 uid="uid://brgmqf6a1nqe2"]

[ext_resource type="Script" uid="uid://cx55kyh56cxpp" path="res://scenes/ui/main screens/settings_screen.gd" id="1_hjiit"]
[ext_resource type="PackedScene" uid="uid://bwrbxvwsy3t1s" path="res://scenes/ui/common/title_screen_button.tscn" id="2_35gdr"]

[node name="SettingsScreen" type="Control" unique_id=1695013025]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hjiit")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=2084103109]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer" unique_id=1395512736]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
columns = 2

[node name="Master Label" type="Label" parent="VBoxContainer/GridContainer" unique_id=844501743]
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Master Slider" type="HSlider" parent="VBoxContainer/GridContainer" unique_id=1062181595]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="Music Label" type="Label" parent="VBoxContainer/GridContainer" unique_id=732167949]
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Music Slider" type="HSlider" parent="VBoxContainer/GridContainer" unique_id=17380821]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="SFX Label" type="Label" parent="VBoxContainer/GridContainer" unique_id=518022358]
layout_mode = 2
text = "SFX Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFX Slider" type="HSlider" parent="VBoxContainer/GridContainer" unique_id=1817768376]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="Control" type="Control" parent="VBoxContainer" unique_id=571526512]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Back Button" parent="VBoxContainer/Control" unique_id=1491602402 instance=ExtResource("2_35gdr")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -20.0
offset_right = 25.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[connection signal="value_changed" from="VBoxContainer/GridContainer/Master Slider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/Music Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/SFX Slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Control/Back Button" to="." method="_on_back_button_pressed"]
